Update some Collectors#toList into toList